[gd_scene load_steps=6 format=3 uid="uid://b3xk0gy85bns1"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_0k4v8"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2_7j3m9"]
[ext_resource type="Script" path="res://scripts/EnemySpawner.gd" id="3_hp2vx"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="4_d8n5w"]
[ext_resource type="Script" path="res://scripts/CameraController.gd" id="5_m7p4r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k3j8"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_8m2n7"]
radius = 40.0

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
script = preload("res://scripts/CameraController.gd")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(960, 540)
collision_layer = 1
collision_mask = 2
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(0, 1, 0, 1)
texture = preload("res://icon.svg")
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("1")

[node name="HurtBox" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/HurtBox"]
shape = SubResource("2")

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("3")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4")

[node name="HealthBar" type="ProgressBar" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 220.0
offset_bottom = -40.0
value = 100.0

[node name="HealthLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = -60.0
text = "Здоровье"

[node name="ExperienceBar" type="ProgressBar" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -40.0

[node name="ExperienceLabel" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -60.0
text = "Опыт"

[node name="TimeLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_right = -20.0
offset_bottom = 40.0
text = "Время: 00:00"

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_right = 150.0
offset_bottom = 40.0
text = "Счет: 0"

[node name="LevelLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = 80.0
text = "Уровень: 1"

[node name="LevelUpPanel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TitleLabel" type="Label" parent="UI/LevelUpPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
text = "Повышение уровня!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LevelUpPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -20.0

[node name="GameOverPanel" type="Panel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="StatsLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Игра окончена!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Начать заново"

[node name="QuitButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Выход"